--- a/public/pvsioweb/app/plugins/emulink/forms/maincontent.handlebars
+++ b/public/pvsioweb/app/plugins/emulink/forms/maincontent.handlebars
@@ -35,10 +35,10 @@
    								    		<button class="emulinkButton" id="addFieldState"   disabled = "true">Add Field</button>
    										</li>
    										<li class='active'>
-   											<button class="emulinkButton changeNameNode" disabled = "true"> Edit State Name</button>
+   											<button class="emulinkButton changeNameNode" disabled = "true"> Edit State Label</button>
    										</li>
    										<li class='active'>
-   											<button class="emulinkButton deleteNode" disabled= "true"> Delete node </button>
+   											<button class="emulinkButton deleteNode" disabled= "true"> Delete State </button>
    										</li>
    									
    									</ul>
@@ -65,10 +65,10 @@
                                        <button class="emulinkButton deleteEdge"  disabled = "true" >  Transition </button>
                                      </li>
                                     <li class='active'>
-                                        <button class="emulinkButton rmvCond" id="rmvCond" disabled="true">  Condition </button>
+                                        <button class="emulinkButton rmvCond context-menu-deleteCond" id="rmvCond" disabled="true">  Condition </button>
                                     </li>
                                     <li class='active'>
-                                        <button class="emulinkButton rmvOper" id="rmvOper" disabled='true' >  Operation
+                                        <button class="emulinkButton rmvOper context-menu-deleteOperation" id="rmvOper" disabled='true' >  Action
                                     </button>
                                     </li>
                                     <li class='active'>
@@ -80,13 +80,13 @@
                                  <li class='has-sub'> <a href='#'><span>Edit</span></a>
                                  <ul>
                                     <li class='active'>
-                                       <button class="emulinkButton changeNameEdge"  disabled = "true" > Transition Name</button>
+                                       <button class="emulinkButton changeNameEdge"  disabled = "true" > Transition Label</button>
                                     </li>
                                     <li class='active '>
                                         <button class="emulinkButton modifyCondition context-menu-one " disabled = "true" >  Condition</button>
                                     </li>  
                                     <li class='active'>
-                                        <button class="emulinkButton modifyOperation"  disabled = "true" > Operation</button>
+                                        <button class="emulinkButton context-menu-modifyOperation modifyOperation"  disabled = "true" > Action</button>
                                     </li>                     
 
                                  </ul>
@@ -139,7 +139,10 @@
                <button class="emulinkButtonToolbar zoom_" disabled="true"> Zoom -</button>
             </div>
          </div>
-        
+        <div style="display:none" id ="workAround">
+        <button  class="rmvCond_"  >  </button>
+        <button  class="rmvOper_"  >  </button>
+        </div>
          <div id="ContainerStateMachineWrapper">
             <br><br><br><br>
             <p style="font-family:verdana; margin-left:0px; color:#327875; font-style:italic;font-weight: bold; font-size:20px;" >Drawing area</p> 
@@ -152,6 +155,6 @@
 				<textarea id="emulinkInfo" readonly> </textarea>
 				<textarea id="infoBox" readonly >TIP: Select a state or a transition to see its properties</textarea>
 				<textarea id="infoBoxModifiable" readonly ></textarea>		
-		        <textarea id="warningDebug" readonly >Debug panel</textarea>
+		       <textarea id="warningDebug" readonly >Debug panel</textarea>
 				
 			</div>			
